--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@heroui/switch": "^2.2.24",
+    "@heroui/system": "^2.4.23",
+    "@heroui/theme": "^2.4.23",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.0",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.24",
     "jose": "^6.1.2",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
