--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "jose": "^6.1.2",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "zod": "^4.1.12"
