--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+      - /Users/arslankaleem/Workspace/Junk/linkedin-skill-assessments-quizzes:/Users/arslankaleem/Workspace/Junk/linkedin-skill-assessments-quizzes
+
     ports:
       - "3000:3000"
     env_file:
@@ -33,6 +35,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - /Users/arslankaleem/Workspace/Junk/linkedin-skill-assessments-quizzes
 
 volumes:
   postgres_data:
