--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "db:deploy": "npx prisma migrate deploy && npx prisma generate"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.947.0",
+    "@aws-sdk/s3-request-presigner": "^3.947.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -18,6 +20,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "jose": "^6.1.2",
