--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "db:deploy": "npx prisma migrate deploy && npx prisma generate"
+    "prisma:migrate": "npx prisma format && npx prisma migrate dev"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.947.0",
