--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "jose": "^6.1.2",
-    "next": "^16.0.7",
+    "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
