--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+      - /Users/arslankaleem/Workspace/Junk/linkedin-skill-assessments-quizzes:/Users/arslankaleem/Workspace/Junk/linkedin-skill-assessments-quizzes
 
     ports:
       - "3000:3000"
@@ -13,7 +14,8 @@ services:
       - .env
       - .env.docker
     environment:
-      DATABASE_URL: postgres://postgres:password@postgres:5432/quizzy
+      DATABASE_URL: postgres://postgres:password@postgres:5432/quizzy-v1
+      SHADOW_DATABASE_URL: postgres://postgres:password@localhost:5432/shadow_db
       NODE_ENV: development
     command: >
       sh -c "npm install &&
