--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,8 @@
     ".next",
     "build",
     "generated",
-    "app/api/seed/route-v0",
-    "lib/types/api-v0"
+    "app/api/seed/old.route.ts",
+    "lib/types/api-v0",
+    "prisma/old_schema"
   ]
 }
