--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@heroui/react": "^2.8.6",
+    "@heroui/spinner": "^2.2.25",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.23.26",
     "jose": "^6.1.2",
+    "lucide-react": "^0.561.0",
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
