--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    image: node:24-alpine
+    build: .
     container_name: quizzy-node
     working_dir: /app
     volumes:
@@ -10,18 +10,18 @@ services:
 
     ports:
       - "3000:3000"
+
     env_file:
       - .env
       - .env.docker
+
     environment:
       DATABASE_URL: postgres://postgres:password@postgres:5432/quizzy-v1
       SHADOW_DATABASE_URL: postgres://postgres:password@localhost:5432/shadow_db
       NODE_ENV: development
-    command: >
-      sh -c "npm install &&
-             npx prisma generate &&
-             npx prisma migrate deploy &&
-             npm run dev"
+
+    command: npm run dev
+
     depends_on:
       - postgres
 
