--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "canvas-confetti": "^1.9.4",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
@@ -31,6 +32,7 @@
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
+    "openai": "^6.15.0",
     "react": "19.2.0",
     "react-calendar": "^6.0.0",
     "react-dom": "19.2.0",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
     "@types/bcrypt": "^6.0.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
