--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.ts",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "eslint",
     "prisma:migrate": "npx prisma format && npx prisma migrate dev"
   },
@@ -22,11 +22,14 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@tanstack/react-query": "^5.90.12",
+    "bullmq": "^5.66.2",
     "canvas-confetti": "^1.9.4",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
+    "ioredis": "^5.8.2",
     "jose": "^6.1.2",
     "lucide-react": "^0.561.0",
     "next": "^16.0.10",
@@ -37,6 +40,8 @@
     "react-calendar": "^6.0.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "socket.io": "^4.8.2",
+    "socket.io-client": "^4.8.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
