--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quizzy",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "node server.ts",
     "build": "next build",
@@ -42,6 +43,7 @@
     "react-icons": "^5.5.0",
     "socket.io": "^4.8.2",
     "socket.io-client": "^4.8.2",
+    "ts-node": "^10.9.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -58,7 +60,7 @@
     "postcss": "^8.5.6",
     "prisma": "^7.1.0",
     "tailwindcss": "^4.1.16",
-    "tsx": "^4.20.6",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   },
   "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
