--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,23 +7,33 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
-      - /Users/arslankaleem/Workspace/Junk/linkedin-skill-assessments-quizzes:/Users/arslankaleem/Workspace/Junk/linkedin-skill-assessments-quizzes
 
     ports:
       - "3000:3000"
 
-    env_file:
-      - .env
-      - .env.docker
-
     environment:
-      DATABASE_URL: postgres://postgres:password@postgres:5432/quizzy-v1
-      SHADOW_DATABASE_URL: postgres://postgres:password@localhost:5432/shadow_db
-      NODE_ENV: development
+      - DATABASE_URL=${DATABASE_URL}
+      - SHADOW_DATABASE_URL=${SHADOW_DATABASE_URL}
+      - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+      - FACEBOOK_CLIENT_ID=${FACEBOOK_CLIENT_ID}
+      - FACEBOOK_CLIENT_SECRET=${FACEBOOK_CLIENT_SECRET}
+      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
+      - DEEPSEEK_API_BASE_URL=${DEEPSEEK_API_BASE_URL}
+      - APP_URL=${APP_URL}
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID}
+      - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY}
+      - S3_REGION=${S3_REGION}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
 
     depends_on:
       - redis
       - postgres
+
+    restart: unless-stopped
 
   # worker:
   #   build: .
@@ -49,6 +59,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - /Users/arslankaleem/Workspace/Junk/linkedin-skill-assessments-quizzes
+    restart: unless-stopped
 
   redis:
     image: redis:8.4-alpine
@@ -57,6 +68,7 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    restart: unless-stopped
 
 volumes:
   postgres_data:
