--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,23 +14,23 @@ services:
     env_file:
       - .env.docker
 
-    environment:
-      - DATABASE_URL=${DATABASE_URL}
-      - SHADOW_DATABASE_URL=${SHADOW_DATABASE_URL}
-      - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
-      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
-      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
-      - FACEBOOK_CLIENT_ID=${FACEBOOK_CLIENT_ID}
-      - FACEBOOK_CLIENT_SECRET=${FACEBOOK_CLIENT_SECRET}
-      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
-      - DEEPSEEK_API_BASE_URL=${DEEPSEEK_API_BASE_URL}
-      - APP_URL=${APP_URL}
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID}
-      - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY}
-      - S3_REGION=${S3_REGION}
-      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+    # environment:
+    #   - DATABASE_URL=${DATABASE_URL}
+    #   - SHADOW_DATABASE_URL=${SHADOW_DATABASE_URL}
+    #   - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
+    #   - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+    #   - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+    #   - FACEBOOK_CLIENT_ID=${FACEBOOK_CLIENT_ID}
+    #   - FACEBOOK_CLIENT_SECRET=${FACEBOOK_CLIENT_SECRET}
+    #   - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
+    #   - DEEPSEEK_API_BASE_URL=${DEEPSEEK_API_BASE_URL}
+    #   - APP_URL=${APP_URL}
+    #   - REDIS_HOST=redis
+    #   - REDIS_PORT=6379
+    #   - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID}
+    #   - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY}
+    #   - S3_REGION=${S3_REGION}
+    #   - S3_BUCKET_NAME=${S3_BUCKET_NAME}
 
     depends_on:
       - redis
